--- a/styles.css
+++ b/styles.css
@@ -6,50 +6,30 @@ html {
 body {
     height: 100%;
     width: 100%;
+    background: rgb(200,125,16);
+background: radial-gradient(circle, rgba(200,125,16,1) 0%, rgba(255,255,255,1) 40%, rgba(255,255,254,1) 74%, rgba(5,42,105,1) 83%, rgba(5,16,104,1) 87%);
     
 }
+
+h1 {
+  font-size: 90px;
+    padding: 8px;
+    margin: 85px;
+  color : rgb(8,61,168);
+}
   
-.column1of2 {
-    float: left;
-    width: 630px;
-    margin: 10px;
-    display: flex;
-    justify-content: space-around;
-  }
 
   .box {
-    height: 75px;
-    width: 75px;
+    height: 130px;
+    width: 130px;
     display: flex;
     flex-direction: row;
   }
-  
-  .box:nth-child(1) {
-    background-color: #fd79a8;
-  }
-  
+   
   .box:nth-child(2) {
-    background-color: #74b9ff;
+    background-color: #1fc227;
   }
-  
-  .box:nth-child(3) {
-    background-color: #f863fd;
-  }
-  .box:nth-child(4) {
-    background-color: #fdd663;
-  }
-  .box:nth-child(5) {
-    background-color: #a29bfe;
-  }
-/*   
-  .column2of2 {
-    float: left;
-    width: 300px;
-    margin: 10px;
-    font-size: 25px;
-    display: flex;
-    justify-content: center;
-  } */
+
 
 .title {
     display: flex;
@@ -59,6 +39,14 @@ body {
     align-items: center;
   }
 
+  .color-boxes-container{
+    display : flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 142px;
+    padding: 17px;
+    margin-left: -105px;
+  }
 
 .box-colors {
   float: left;
@@ -67,6 +55,7 @@ box-sizing: border-box;
 .color-box {
   display: flex;
   align-items: center;
+  flex-direction: column;
 }
 .color-hex {
   font-weight: bold;
@@ -75,8 +64,12 @@ box-sizing: border-box;
 .lock-emoji {
   font-size: 20px;
 }
-button {
-  margin-right: 10px;
+.buttons {
+  margin-right: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -70px
 }
 
   
