--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 html {
     height: 100%;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 body {
     height: 100%;
     width: 100%;
-    background: rgb(200,125,16);
-background: radial-gradient(circle, rgba(200,125,16,1) 0%, rgba(255,255,255,1) 40%, rgba(255,255,254,1) 74%, rgba(5,42,105,1) 83%, rgba(5,16,104,1) 87%);
+    background: rgb(33,112,203);
+background: linear-gradient(90deg, rgba(33,112,203,1) 19%, rgba(255,255,255,1) 77%);
     
 }
 
@@ -15,7 +16,12 @@ h1 {
   font-size: 90px;
     padding: 8px;
     margin: 85px;
-  color : rgb(8,61,168);
+  color : #083da8;
+}
+h2 {
+  color: #083da8;
+  padding: 40px;
+  
 }
   
 
@@ -26,9 +32,23 @@ h1 {
     flex-direction: row;
   }
    
-  .box:nth-child(2) {
-    background-color: #1fc227;
-  }
+  #box1 {
+    background-color: #0000ff;
+   }
+
+   #box2 {
+    background-color: #ff0000;
+   }
+   #box3 {
+    background-color: #ffff00;
+   }
+   #box4 {
+    background-color: #ffffff;
+   }
+   #box5 {
+    background-color: #ffa500;
+   }
+  
 
 
 .title {
@@ -45,7 +65,6 @@ h1 {
     justify-content: space-evenly;
     margin: 142px;
     padding: 17px;
-    margin-left: -105px;
   }
 
 .box-colors {
@@ -65,14 +84,44 @@ box-sizing: border-box;
   font-size: 20px;
 }
 .buttons {
-  margin-right: 80px;
+  margin-right: 245px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: -70px
+}
+.right-section {
+  float: right;
+  width: 230px;
+  height: 137%;
+  background-color: white;
+  border: 5px solid black;
+  padding: 33px;
+  }
+
+main {
+  flex: 70% ;
+  display: flex;
+  justify-content: center;
+
+  }
+
+.wrapper1 {
+  display: flex;
+    align-items: baseline;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
-  
-  
+  .wrapper2 {
+    display: flex;
+    justify-content: center;
+    float: right;
+    margin-right: -41px;
+  }
+.box-details {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+}
 
   
