Add: locked function

--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,11 @@ box-sizing: border-box;
 .lock-emoji {
   font-size: 20px;
 }
+
+.unlock-emoji {
+  font-size: 20px;
+}
+
 .buttons {
   margin-right: 245px;
   display: flex;
@@ -127,4 +132,7 @@ main {
   align-items: flex-end;
 }
 
+.hidden {
+  display : none;
+}
   
