--- a/styles.css
+++ b/styles.css
@@ -63,8 +63,7 @@ h2 {
     display : flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin: 142px;
-    padding: 17px;
+    margin: 90px;
   }
 
 .box-colors {
@@ -79,6 +78,7 @@ box-sizing: border-box;
 .color-hex {
   font-weight: bold;
   margin-right: 10px;
+  margin-bottom: -20px;
 }
 .lock-emoji {
   font-size: 20px;
@@ -93,8 +93,9 @@ box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 35px;
-    margin-right: 233px
+  margin: 65px;
+  font-style: italic;
+  font-weight: bold;
 }
 .right-section {
   float: right;
@@ -130,6 +131,7 @@ main {
   display: flex;
   justify-content: space-around;
   align-items: flex-end;
+  width: 132px
 }
 
 .hidden {
